--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-
+!.idea/**
 !/.gitignore
 !/TestUnit.iml
+Removeria src/main/resources/
+Removeria target/generated-sources/
+Removeria target/generated-test-sources/
